--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -80,7 +80,7 @@
 								</li>
 							</ul>
 						</div>
-						<div class="col-12">
+						<div class="col-desc col-12">
 							<p class="services-description-text">Разработка системы визуальной коммуникации и&nbsp;архитектуры бренда корпоративной социальной программы Металлоинвеста
 							</p>
 						</div>
@@ -261,7 +261,7 @@
 			<div class="sServiceHead section sServiceHead sServiceHead--for-what" id="sServiceHead">
 				<div class="container">
 					<div class="row">
-						<div class="col-12">
+						<div class="col-desc col-12">
 							<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
 							</p>
 						</div>
