--- a/public/08-portfolio.html
+++ b/public/08-portfolio.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Услуги</title>
+		<title>Портфолио</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -11,7 +11,7 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="main-page" data-bg="3-1-Service.jpg">
+	<body class="main-page">
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
@@ -57,169 +57,160 @@
 			<!-- end top-nav-->
 			<div class="page-head"> 
 				<div class="container">
-					<h1>Услуги</h1>
+					<h1>Портфолио</h1>
+					<div class="filter">
+						<a class="filter__link filter__link--active" href="#">Услуги
+						</a>
+						<a class="filter__link" href="#">Отрасли
+						</a>
+					</div>
 				</div>
 			</div>
 			<!-- start sServiceHead-->
-			<div class="sServiceHead section" id="sServiceHead">
+			<div class="sServiceHead section sServiceHead" id="sServiceHead">
 				<div class="container">
 					<div class="row">
-						<div class="col-desc col-12">
-							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
-							</p>
-						</div>
 						<div class="col">
-							<ul class="services-list">
+							<ul class="services-list services-list--indent services-list--portfolio">
 								<li class="services-list__item">
-									<button class="services-list__link">Все услуги
+									<button class="services-list__link">Напитки
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__link">Потребительский брендинг
+									<button class="services-list__link">Мясные продукты
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__link">Корпоративный брендинг
+									<button class="services-list__link">Молочные и НЕмолочные продукты
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__link">Стратегия
+									<button class="services-list__link">Бакалея и кондитерские изделия
 									</button>
 								</li>
 								<li class="services-list__item">
-									<button class="services-list__link">Продвижение
+									<button class="services-list__link">Фармацевтика
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Дети и здоровье
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Финансы и девелопмент
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Государственные организации и программы
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Добывающая промышленность
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Технологии
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Товары и услуги для детей
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Бытовая химия и товары для дома
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Социально значимые проекты и госпрограммы
 									</button>
 								</li>
 							</ul>
 						</div>
-						<div class="col-12"> 
-							<div class="dd-group dd-group-js">
-								<div class="dd-group__item">
-									<div class="dd-group__head dd-head-js">
-										<div class="dd-group__row row">
-											<div class="col">
-												<div class="dd-group__wrraper">
-													<h4>Стратегия</h4>
-													<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем. Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</p>
-												</div>
-											</div>
-											<div class="col-auto">
-												<button></button>
-											</div>
-										</div>
-									</div>
-									<div class="dd-group__content dd-content-js">
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Собираем и анализируем информацию</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Аудит бренда</p>
-														</li>
-														<li>
-															<p>Глубинные и экспертные интервью</p>
-														</li>
-														<li>
-															<p>Кабинетные исследования</p>
-														</li>
-														<li>
-															<p>Внешние исследования (супервайзинг)</p>
-														</li>
-														<li>
-															<p>Стратегические сессии и воркшопы</p>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Формируем смысловое наполнение</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Позиционирование</p>
-														</li>
-														<li>
-															<p>Платформа бренда</p>
-														</li>
-														<li>
-															<p>EVP HR бренда (с принципами корпоративной культуры)</p>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Создаём структуру</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Бренд–архитектура</p>
-														</li>
-														<li>
-															<p>Ассортиментная матрица</p>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-										<div class="content-wrrap"> 
-											<div class="row">
-												<div class="col-lg-6"> 
-													<p>Формируем принципы общения с аудиторией</p>
-												</div>
-												<div class="col-lg-6">
-													<ul> 
-														<li>
-															<p>Коммуникационная стратегия</p>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
+						<div class="dropdown">
+							<button class="dropdown__btn btn dropdown-toggle" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Все отрасли
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+								</svg>
+							</button>
+							<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+								<div class="dropdown-item" href="#">Напитки</div>
+								<div class="dropdown-item" href="#">Мясные продукты</div>
+								<div class="dropdown-item" href="#">Молочные и НЕмолочные продукты</div>
+								<div class="dropdown-item" href="#">Бакалея и кондитерские изделия</div>
+								<div class="dropdown-item" href="#">Фармацевтика</div>
+								<div class="dropdown-item" href="#">Дети и здоровье</div>
+								<div class="dropdown-item" href="#">Финансы и девелопмент</div>
+								<div class="dropdown-item" href="#">Государственные организации и программы</div>
+								<div class="dropdown-item" href="#">Технологии</div>
+								<div class="dropdown-item" href="#">Товары и услуги для детей</div>
+								<div class="dropdown-item" href="#">Бытовая химия и товары для дома</div>
+								<div class="dropdown-item" href="#">Социально значимые проекты и госпрограммы</div>
 							</div>
 						</div>
-						<a class="download-link" href="#">
-							<svg class="icon icon-doc-download ">
-								<use xlink:href="img/svg/sprite.svg#doc-download"></use>
-							</svg><span>Скачать презентацию (PDF)</span>
-						</a>
 					</div>
 				</div>
 			</div>
 			<!-- end sServiceHead-->
 			<!-- start sCard-->
-			<div class="sCard section indent-bottom" id="sCard">
+			<div class="sCard section" id="sCard">
 				<div class="container-wide">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="cardWrrap cardWrrap--horizontal text-lg-white">
+							<div class="cardWrrap cardWrrap--horizontal">
 								<div class="cardWrrap__content">
-									<h2>Выбери цвет настроения!</h2><span>Стратегия</span>
+									<h2>Bakerton. Выбери цвет настроения!</h2><span>Потребительский брендинг</span>
 								</div>
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/card-bg-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/card-bg-1.webp"/><img class="object-fit-js" src="img/@2x/card-bg-1.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 							</div>
 						</div>
 						<div class="col-md-6"> 
-							<div class="cardWrrap text-lg-white">
+							<div class="cardWrrap text-white">
 								<div class="cardWrrap__content">
-									<h2>Еще один проект для любимого бренда</h2><span>Продвижение, Стратегия</span>
+									<h2>SNS. Ничего лишнего</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-2.webp"/><img class="object-fit-js" src="img/@2x/main-bg-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2>Nemoloko. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-3.webp"/><img class="object-fit-js" src="img/@2x/card-bg-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
+								<div class="cardWrrap__content">
+									<h2>Valio. Clean design for &laquo;Сlean label&raquo;</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap text-white">
+								<div class="cardWrrap__content">
+									<h2>Valio. Еще один проект для любимого бренда</h2><span>Продвижение, Стратегия</span>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -232,7 +223,46 @@
 						<div class="col-md-6">
 							<div class="cardWrrap">
 								<div class="cardWrrap__content">
-									<h2>Ничего лишнего</h2><span>Продвижение, Стратегия</span>
+									<h2>Woolite. Чистый кератин</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-4.webp"/><img class="object-fit-js" src="img/@2x/main-bg-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
+								<div class="cardWrrap__content">
+									<h2>Bakerton. Выбери цвет настроения!</h2><span>Потребительский брендинг</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap text-white">
+								<div class="cardWrrap__content">
+									<h2>SNS. Ничего лишнего</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-2.webp"/><img class="object-fit-js" src="img/@2x/main-bg-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2>Nemoloko. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -242,11 +272,52 @@
 								<!-- /picture-->
 							</div>
 						</div>
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
+								<div class="cardWrrap__content">
+									<h2>Valio. Clean design for &laquo;Сlean label&raquo;</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap text-white">
+								<div class="cardWrrap__content">
+									<h2>Valio. Еще один проект для любимого бренда</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-2.webp"/><img class="object-fit-js" src="img/@2x/card-bg-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2>Woolite. Чистый кератин</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-4.webp"/><img class="object-fit-js" src="img/@2x/main-bg-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
 					</div>
 					<div class="btn-more" href="#">
 						<svg class="icon icon-chevron-right-btn ">
 							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
 						</svg><span>Портфолио по стратегии</span>
+					</div>
+					<div class="spinner">
 					</div>
 				</div>
 			</div>
