--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,149 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
+			<!-- start sServiceHead-->
+			<div class="sServiceHead section" id="sServiceHead">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-6 col-lg-4 col-xl-3">
+							<div class="services-goods"><span>5768</span><span>выполненных проектов</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4 col-xl-3">
+							<div class="services-goods"><span>668</span><span>довольных клиентов</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4 col-xl-3">
+							<div class="services-goods"><span>34</span><span>светлейших головы</span>
+							</div>
+						</div>
+						<div class="col-sm-6 col-lg-4 col-xl-3">
+							<div class="services-goods services-goods--indent"><span>65</span><span>наград за&nbsp;проекты</span>
+							</div>
+						</div>
+						<div class="col-desc col-12">
+							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
+							</p>
+						</div>
+						<div class="col">
+							<ul class="services-list services-list--indent">
+								<li class="services-list__item">
+									<button class="services-list__link">Все услуги
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Потребительский брендинг
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Корпоративный брендинг
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Стратегия
+									</button>
+								</li>
+								<li class="services-list__item">
+									<button class="services-list__link">Продвижение
+									</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end sServiceHead-->
+			<!-- start sCard-->
+			<div class="sCard section" id="sCard">
+				<div class="container-wide">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
+								<div class="cardWrrap__content">
+									<h2>Bakerton. Выбери цвет настроения!</h2><span>Потребительский брендинг</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg.webp"/><img class="object-fit-js" src="img/@2x/main-bg.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap text-white">
+								<div class="cardWrrap__content">
+									<h2>SNS. Ничего лишнего</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-2.webp"/><img class="object-fit-js" src="img/@2x/main-bg-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2>Nemoloko. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-3.webp"/><img class="object-fit-js" src="img/@2x/card-bg-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal">
+								<div class="cardWrrap__content">
+									<h2>Valio. Clean design for &laquo;Сlean label&raquo;</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-3.webp"/><img class="object-fit-js" src="img/@2x/main-bg-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap text-white">
+								<div class="cardWrrap__content">
+									<h2>Valio. Еще один проект для любимого бренда</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-2.webp"/><img class="object-fit-js" src="img/@2x/card-bg-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2>Woolite. Чистый кератин</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/main-bg-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/main-bg-4.webp"/><img class="object-fit-js" src="img/@2x/main-bg-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<div class="btn-more" href="#">
+						<svg class="icon icon-chevron-right-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+						</svg><span>Портфолио по стратегии</span>
+					</div>
+				</div>
+			</div>
+			<!-- end sCard-->
 			<!-- start sNews-->
 			<div class="sNews section" id="sNews">
 				<div class="container-wide">
